# private-wrapper

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  router.rs  serde_utils.rs  types.rs
crates/api/src/handlers/: apply.rs  balances.rs  deposit.rs  initialize.rs  mod.rs  transfer.rs  unwrap_tokens.rs  withdraw.rs  wrap_tokens.rs
crates/api/src/tests/: mod.rs  test_deposit.rs  test_initialize.rs  test_private_wrapper.rs  test_transfer.rs  test_withdraw.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: api.rs  apply.rs  balances.rs  create_confidential_wrapped_mint.rs  deposit.rs  initialize.rs  mod.rs  transfer.rs  unwrap.rs  withdraw.rs  wrap.rs
crates/common/: Cargo.toml
crates/common/src/: accounts.rs  key_generator.rs  lib.rs  proofs.rs  test_helpers.rs
scripts/: private_wrapper.service
