[workspace]
members = [ "crates/api","crates/common"]
resolver = "2"

[workspace.dependencies]
solana-zk-sdk = "2.2.1"
solana-sdk = "2.2.1"
anyhow = "1"
serde = {version = "1", features = ["derive"]}
spl-token-2022 = "7.0.0"
spl-associated-token-account = {version = "6.0.0", features = ["no-entrypoint"]}