[workspace]
members = [ "crates/api","crates/common"]
resolver = "2"

[workspace.dependencies]
solana-zk-sdk = "2.2.1"
solana-sdk = "2.2.1"
anyhow = "1"
serde = {version = "1", features = ["derive"]}
spl-token-2022 = "7.0.0"
spl-associated-token-account = {version = "6.0.0", features = ["no-entrypoint"]}
spl-token-confidential-transfer-proof-extraction = "0.2.1"
spl-token-confidential-transfer-proof-generation = "0.3.0"
bytemuck = "1"