[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.axum]
version = "0.8"
[dependencies.serde_json]
version = "1"
[dependencies.tower-http]
version = "0.6"
features = ["cors", "trace"]
[dependencies.http]
version = "1"
[dependencies.tracing]
version = "0.1"
[dependencies.solana-client]
version = "2.2.1"
[dependencies.bincode]
version = "1"
[dependencies.base64]
version = "0.22"
[dependencies.serde]
workspace = true
[dependencies.anyhow]
workspace = true
[dependencies.solana-sdk]
workspace = true
[dependencies.spl-associated-token-account]
workspace = true
[dependencies.spl-token-2022]
workspace = true
[dependencies.spl-token-confidential-transfer-proof-extraction]
workspace =  true
[dependencies.spl-token-confidential-transfer-proof-generation]
workspace = true

[dependencies.common]
path = "../common"

[dev-dependencies.common]
path = "../common"
features = ["test-helpers"]
[dev-dependencies.tower]
version = "0.5"
[dev-dependencies.spl-token-client]
version = "0.14"
[dev-dependencies.http-body-util]
version = "0.1"
[dev-dependencies.axum-test]
version = "17"
[dev-dependencies.solana-transaction-status-client-types]
version = "2.2.1"