[package]
name = "private-wrapper-cli"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.clap]
version = "4"
features = ["derive"]
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json", "parking_lot", "tracing-log"]
[dependencies.tracing]
version = "0.1.40"
features = ["log", "attributes"]
[dependencies.log]
version = "0.4"
[dependencies.anyhow]
workspace = true
[dependencies.spl-token-wrap]
workspace = true
[dependencies.solana-client]
version = "2.2.1"
[dependencies.solana-sdk]
workspace =  true
[dependencies.spl-token-2022]
workspace = true
[dependencies.spl-associated-token-account]
workspace = true
[dependencies.reqwest]
version = "0.12"
features = ["json"]
[dependencies.serde_json]
version = "1"
[dependencies.api]
path = "../api"
[dependencies.common]
path = "../common"