[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-helpers = []

[dependencies.solana-zk-sdk]
workspace = true
[dependencies.solana-sdk]
workspace = true
[dependencies.anyhow]
workspace = true
[dependencies.serde]
workspace = true
[dependencies.spl-token-2022]
workspace = true
[dependencies.bytemuck]
workspace = true
[dependencies.spl-token-confidential-transfer-proof-extraction]
workspace =  true
[dependencies.spl-token-confidential-transfer-proof-generation]
workspace = true

[dev-dependencies.spl-pod]
version = "0.5"